--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,109 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body,
+html {
+  font-family: 'Lato', sans-serif;
+}
+
+.bg {
+  background: rgb(32, 52, 64);
+  background: linear-gradient(90deg, rgba(32, 52, 64, 1) 0%, rgba(184, 94, 78, 1) 50%, rgba(32, 52, 64, 1) 97%);
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+
+.fill-remaining-space {
+  /* This fills the remaining space, by using flexbox.
+     Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
+.top-nav{
+  background-color: #112f41;
+  color: #F2B134;
+  height: 60px;
+  box-shadow: 0px 1px 10px 7px black;
+}
+.top-nav span {
+  margin: 5px;
+}
+.top-nav .brand{
+  font-family: 'Dancing Script', cursive;
+  font-size: 40px !important;
+}
+
+/*****************
+Landing Page banner
+******************/
+.banner {
+  height: 85vh;
+  min-height: 300px;
+  text-align: center;
+}
+
+.banner .container {
+  padding: 20px;
+  padding-top: 80px;
+}
+
+.banner-subtitle,
+.banner-subtitle {
+  margin-bottom: 30px;
+}
+
+.banner-title {
+  /* padding-top:10px; */
+  color: #F2B134;
+  /* color: #eb553a; */
+  font-size: 4.5rem;
+}
+
+.banner-title span {
+  font-family: 'Dancing Script', cursive;
+  color: #F2B134;
+  font-size: 5rem;
+}
+
+.banner-subtitle {
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.banner-button {
+  background-color: #4eea2a;
+  color: #112f41;
+  font-size: 1.5rem;
+  padding: 15px 20px;
+  border-radius: 5px;
+  border: none;
+  font-weight: 800;
+}
+
+.banner-button:hover {
+  background-color: #068587;
+  transition: ease-in 0.2s;
+  color: azure !important;
+}
+
+.main-footer {
+  text-align: center;
+  background-color: #112f41;
+  color: azure;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  padding: 10px;
+  position: absolute;
+}
