--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -2,15 +2,15 @@
 
     <span class="brand">iReporter</span>
     <span class="fill-remaining-space"></span>
-    <span>Login</span>
-    <span>Sign up</span>
+    <a routerLink="/login"><span>Login</span></a>
+    <a routerLink="/signup"><span>Sign up</span></a>
 
 </mat-toolbar>
 <header class="banner">
   <div class="container">
     <div class='banner-title'> Welcome to <span>iReporter</span>!</div>
     <div class="banner-subtitle">Building a better nation starts with you</div>
-    <a href='login.html'>
+    <a routerLink='/login'>
       <button class="banner-button">WHISTLE BLOW</button>
     </a>
   </div>
